tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0211/input.js
function hello() {'use strict'; ({ s: function s(eval) { } }); }
